--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="page">
         <div class="container">
-            <h1>Welcome to our github page</h1>
+            <span>bs-style-gmbh</span>
         </div>
     </div>
 </body>
